help with memory

--- a/clock_algo/digit_classification.ipynb
+++ b/clock_algo/digit_classification.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -137,18 +137,18 @@
     "class LabeledDataset(Dataset):\n",
     "    def __init__(self, data_folder, transform=None):\n",
     "        self.data = []\n",
+    "        # the number of data for each label should be similar\n",
+    "        cap = self._calc_sample_cap(data_folder)\n",
     "        for x in os.listdir(data_folder):\n",
     "            # list label folders\n",
     "            x_path = os.path.join(data_folder, x)\n",
     "            if os.path.isdir(x_path):\n",
     "                # list images in label folder\n",
-    "                for y in os.listdir(x_path):\n",
+    "                for y in os.listdir(x_path)[:cap]:\n",
     "                    if self._is_img(y):\n",
     "                        img = Image.open(os.path.join(x_path, y))\n",
     "                        self.data.append((transform(img), int(x)))\n",
-    "            \n",
-    "        \n",
-    "    \n",
+    "\n",
     "    def __getitem__(self, index):\n",
     "        # TODO\n",
     "        # 1. Read one data from file (e.g. using numpy.fromfile, PIL.Image.open).\n",
@@ -161,20 +161,103 @@
     "        return len(self.data)\n",
     "    \n",
     "    def _is_img(self, file_path):\n",
-    "        return any([file_path.endswith(ext) for ext in ('.jpg', '.jpeg', '.png')])"
+    "        return any([file_path.endswith(ext) for ext in ('.jpg', '.jpeg', '.png')])\n",
+    "    \n",
+    "    def _calc_sample_cap(self, folder):\n",
+    "        return max([len(os.listdir(os.path.join(folder, dire))) for dire in os.listdir(folder) if os.path.isdir(os.path.join(folder, dire))])\n",
+    "        \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "132000\n",
+      "133000\n",
+      "134000\n",
+      "135000\n",
+      "136000\n",
+      "137000\n",
+      "138000\n",
+      "139000\n",
+      "140000\n",
+      "141000\n",
+      "142000\n",
+      "143000\n",
+      "144000\n",
+      "145000\n",
+      "146000\n",
+      "147000\n",
+      "148000\n",
+      "149000\n",
+      "150000\n",
+      "151000\n",
+      "152000\n",
+      "153000\n",
+      "154000\n",
+      "155000\n",
+      "156000\n",
+      "157000\n",
+      "158000\n",
+      "159000\n",
+      "160000\n",
+      "161000\n",
+      "162000\n",
+      "163000\n",
+      "164000\n",
+      "165000\n",
+      "166000\n",
+      "167000\n",
+      "168000\n",
+      "169000\n",
+      "170000\n",
+      "171000\n",
+      "172000\n",
+      "173000\n",
+      "174000\n",
+      "175000\n",
+      "176000\n",
+      "177000\n",
+      "178000\n",
+      "179000\n",
+      "180000\n",
+      "181000\n",
+      "182000\n",
+      "183000\n",
+      "184000\n",
+      "185000\n",
+      "186000\n",
+      "187000\n",
+      "188000\n",
+      "189000\n",
+      "190000\n",
+      "191000\n",
+      "192000\n",
+      "193000\n",
+      "194000\n",
+      "195000\n",
+      "196000\n",
+      "197000\n",
+      "198000\n",
+      "199000\n",
+      "200000\n",
+      "201000\n",
+      "202000\n"
+     ]
+    }
+   ],
    "source": [
     "# copy from original data source to cropped labeled folder\n",
     "from digitStruct import *\n",
-    "root = '/Users/jtao/Downloads/test'\n",
+    "root = '/Users/jtao/Downloads/extra'\n",
     "dsFileName = os.path.join(root, 'digitStruct.mat')\n",
     "data_agg = root + '_agg'\n",
     "if not os.path.exists(data_agg):\n",
@@ -183,6 +266,7 @@
     "for dsObj in yieldNextDigitStruct(dsFileName):\n",
     "    break\n",
     "    testCounter += 1\n",
+    "    if testCounter < 132000: continue\n",
     "    if not testCounter % 1000:\n",
     "        print(testCounter)\n",
     "#     print(dsObj.name)\n",
@@ -191,21 +275,41 @@
     "    for bbox in dsObj.bboxList:\n",
     "#         print(\"    {}:{},{},{},{}\".format(\n",
     "#             bbox.label, bbox.left, bbox.top, bbox.width, bbox.height))\n",
-    "        label_dir = os.path.join(data_agg, str(bbox.label))\n",
-    "        if not os.path.exists(label_dir):\n",
-    "            os.mkdir(label_dir)\n",
-    "        cropped = img.crop((bbox.left, bbox.top, bbox.left+bbox.width, bbox.top+bbox.height))\n",
-    "        padded = pad_img(cropped)\n",
-    "        padded.save(os.path.join(label_dir, str(dsObj.name) + '_' + str(bbox.left) + '_' + str(bbox.top) + '.png'))\n",
+    "        try:\n",
+    "            label_dir = os.path.join(data_agg, str(bbox.label))\n",
+    "            if not os.path.exists(label_dir):\n",
+    "                os.mkdir(label_dir)\n",
+    "            cropped = img.crop((bbox.left, bbox.top, bbox.left+bbox.width, bbox.top+bbox.height))\n",
+    "            padded = pad_img(cropped)\n",
+    "            padded.save(os.path.join(label_dir, str(dsObj.name) + '_' + str(bbox.left) + '_' + str(bbox.top) + '.png'))\n",
+    "        except:\n",
+    "            print('skipping a defect')\n",
+    "            continue\n",
     "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-261b2bd86222>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#     transform=proc_fn,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# )\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLabeledDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/jtao/Downloads/extra_agg/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mproc_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;31m# np.place(data.labels, data.labels == 10, 0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-67-d0ec0586a508>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_folder, transform)\u001b[0m\n\u001b[1;32m     22\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m                         \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-68-261b2bd86222>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpwd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'pwd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mproc_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'L'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# data = SVHN(\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#     pwd,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#     download=True,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jtao/miniconda2/lib/python2.7/site-packages/PIL/Image.pyc\u001b[0m in \u001b[0;36mconvert\u001b[0;34m(self, mode, matrix, dither, palette, colors)\u001b[0m\n\u001b[1;32m    858\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 860\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    861\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jtao/miniconda2/lib/python2.7/site-packages/PIL/ImageFile.pyc\u001b[0m in \u001b[0;36mload\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_exclusive_fp\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_close_exclusive_fp_after_loading\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 248\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    249\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "pwd = %pwd\n",
     "proc_fn = lambda x: transforms.Normalize([0.5], [0.5])(transforms.ToTensor()(x.convert('L')))\n",
@@ -214,7 +318,7 @@
     "#     download=True, \n",
     "#     transform=proc_fn,\n",
     "# )\n",
-    "data = LabeledDataset('/Users/jtao/Downloads/train_agg/', transform=proc_fn)\n",
+    "data = LabeledDataset('/Users/jtao/Downloads/extra_agg/', transform=proc_fn)\n",
     "# np.place(data.labels, data.labels == 10, 0)"
    ]
   },
@@ -1409,29 +1513,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jtao/Downloads/train_agg/9 has 4659 files\n",
-      "/Users/jtao/Downloads/train_agg/0 has 4948 files\n",
-      "/Users/jtao/Downloads/train_agg/7 has 5595 files\n",
-      "/Users/jtao/Downloads/train_agg/6 has 5727 files\n",
-      "/Users/jtao/Downloads/train_agg/1 has 13861 files\n",
-      "/Users/jtao/Downloads/train_agg/8 has 5045 files\n",
-      "/Users/jtao/Downloads/train_agg/4 has 7458 files\n",
-      "/Users/jtao/Downloads/train_agg/3 has 8497 files\n",
-      "/Users/jtao/Downloads/train_agg/2 has 10585 files\n",
-      "/Users/jtao/Downloads/train_agg/5 has 6882 files\n"
+      "/Users/jtao/Downloads/extra_agg/9 has 34397 files\n",
+      "/Users/jtao/Downloads/extra_agg/7 has 43931 files\n",
+      "/Users/jtao/Downloads/extra_agg/6 has 41503 files\n",
+      "/Users/jtao/Downloads/extra_agg/1 has 90435 files\n",
+      "/Users/jtao/Downloads/extra_agg/10 has 45496 files\n",
+      "/Users/jtao/Downloads/extra_agg/8 has 35293 files\n",
+      "/Users/jtao/Downloads/extra_agg/4 has 50553 files\n",
+      "/Users/jtao/Downloads/extra_agg/3 has 60655 files\n",
+      "/Users/jtao/Downloads/extra_agg/2 has 74631 files\n",
+      "/Users/jtao/Downloads/extra_agg/5 has 53407 files\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "root = '/Users/jtao/Downloads/train_agg'\n",
+    "root = '/Users/jtao/Downloads/extra_agg'\n",
     "for dire in os.listdir(root):\n",
     "    dire = os.path.join(root, dire)\n",
     "    if os.path.isdir(dire):\n",
@@ -1445,7 +1549,18 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "/Users/jtao/Downloads/train_agg/9 has 4659 files\n",
+    "/Users/jtao/Downloads/train_agg/0 has 4948 files\n",
+    "/Users/jtao/Downloads/train_agg/7 has 5595 files\n",
+    "/Users/jtao/Downloads/train_agg/6 has 5727 files\n",
+    "/Users/jtao/Downloads/train_agg/1 has 13861 files\n",
+    "/Users/jtao/Downloads/train_agg/8 has 5045 files\n",
+    "/Users/jtao/Downloads/train_agg/4 has 7458 files\n",
+    "/Users/jtao/Downloads/train_agg/3 has 8497 files\n",
+    "/Users/jtao/Downloads/train_agg/2 has 10585 files\n",
+    "/Users/jtao/Downloads/train_agg/5 has 6882 files"
+   ]
   }
  ],
  "metadata": {
